--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@apollo/server": "^4.3.1",
+    "axios": "^1.2.5",
+    "graphql": "^16.6.0",
     "vue": "^3.2.45",
     "vue-router": "4"
   },
